--- a/style.css
+++ b/style.css
@@ -3,3 +3,44 @@ body {
   height: 100%;
   margin: 0;
 }
+
+#main-header {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.nav-link {
+  padding: 10px 10px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #808080
+}
+
+figure {
+  text-align: center;
+}
+
+figcaption {
+  font-size: 10px;
+}
+
+.text-block {
+  text-align: center;
+}
+
+#details {
+  display: flex;
+}
+
+#details > div {
+  flex: 1;
+}
+
+
+  
